core cleanup; theme2 work

--- a/themes/curve2/template.html
+++ b/themes/curve2/template.html
@@ -9,9 +9,10 @@
 <link rel="stylesheet" href="css/theme2.css" type="text/css" />
 <link rel="stylesheet" href="{THEME_DIR}style.css" type="text/css" />
 <link rel="shortcut icon" href="favicon.ico" />
+{CSS}
 {JAVASCRIPT}
 </head>
-<body>
+<body class="{BODY_CLASS}">
     {CUSTOM_HEADER}
     <div id="cpg_logo_block_outer">
         <div class="cpg_logo_block_inner">
