--- a/themes/water_drop2/template.html
+++ b/themes/water_drop2/template.html
@@ -10,7 +10,7 @@
   <link href="favicon.ico" rel="shortcut icon" />
   <link href="css/theme2.css" rel="stylesheet" type="text/css" />
   <link href="{THEME_DIR}style.css" rel="stylesheet" type="text/css" />
-  {USER_CSS}
+  {CSS}
   {JAVASCRIPT}
 </head>
 <body class="{BODY_CLASS}">
@@ -18,25 +18,21 @@
   <table width="100%" border="0" cellpadding="20" cellspacing="20">
     <tr>
       <td valign="top" style="border: 1px solid #CCD7E0; background-color: #FFFFFF;">
-        <table width="100%" border="0" cellspacing="0" cellpadding="0">
-          <tr>
-            <td width="100%" align="center">
+        <div width="100%">
+          <div width="100%" align="center">
               <h1>{GAL_NAME}</h1>
               <h3>{GAL_DESCRIPTION}</h3><br />
               {SYS_MENU}<br />{SUB_MENU}
-            </td>
-          </tr>
-        </table>
+          </div>
+        </div>
         <img src="images/spacer.gif" width="1" height="15" alt="" />
-        <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
-          <tr>
-            <td valign="top">
+        <div width="100%" align="center">
+          <div valign="top">
               {ADMIN_MENU}
               {MESSAGE_BLOCK}
               {GALLERY}
-            </td>
-          </tr>
-        </table>
+          </div>
+        </div>
       </td>
     </tr>
   </table>
