more theme2 efforts, especially for small screens

--- a/themes/water_drop2/template.html
+++ b/themes/water_drop2/template.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="{LANG_DIR}">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta name="referrer" content="origin">
 	<title>{TITLE}</title>
@@ -20,7 +20,7 @@
 		<td valign="top" style="border: 1px solid #CCD7E0; background-color: #FFFFFF;">
 		<div width="100%">
 			<div width="100%" align="center">
-				<h1>{GAL_NAME}</h1>
+				<h1><a href="index.php">{GAL_NAME}</a></h1>
 				<h3>{GAL_DESCRIPTION}</h3>
 				<div class="menus">
 					{SYS_MENU}
